# RLVR-games

./: .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml  pyrightconfig.json  todo.md
.agents/skills/commit/: SKILL.md
.agents/skills/review/: SKILL.md
config/games/chess/: puzzle_dense.yaml  standard_start_terminal.yaml
config/games/connect4/: random_start_terminal.yaml  solver_opponent.yaml
config/games/game2048/: fixed_board_score_delta.yaml  random_start_target_tile.yaml
config/games/mastermind/: fixed_code_candidate_reduction.yaml  standard_game_terminal.yaml
config/games/minesweeper/: fixed_board_dense.yaml  random_board_outcome.yaml
config/games/yahtzee/: fixed_state_score_delta.yaml  standard_game_final_score.yaml
rlvr_games/: __init__.py
rlvr_games/cli/: __init__.py  common.py  main.py  registry.py  session.py  specs.py
rlvr_games/core/: __init__.py  action_context.py  async_env.py  env.py  exceptions.py  messages.py  protocol.py  rewards.py  rollout.py  task_spec_base.py  trajectory.py  types.py  workflow.py  wrappers.py
rlvr_games/datasets/: __init__.py  manifest.py  parquet.py
rlvr_games/games/: __init__.py
rlvr_games/games/chess/: __init__.py  actions.py  backend.py  cli.py  dataset_cli.py  datasets.py  datasets_cli.py  env.py  factory.py  render.py  rewards.py  scenarios.py  state.py  stockfish.py  stockfish_install.py  stockfish_runtime.py  task_spec.py  turns.py
rlvr_games/games/connect4/: __init__.py  actions.py  backend.py  cli.py  factory.py  render.py  rewards.py  scenarios.py  solver.py  state.py  task_spec.py  turns.py  variant.py
rlvr_games/games/game2048/: __init__.py  actions.py  backend.py  chance.py  cli.py  engine.py  (+8 more)
rlvr_games/task_specs/: __init__.py  loader.py  registry.py
tests/: test_chess_env.py  test_core_env.py
tests/test_cli/: test_chess_cli.py  test_chess_datasets_cli.py  test_connect4_cli.py  test_datasets_cli.py  test_game2048_cli.py  test_main.py  test_mastermind_cli.py  test_minesweeper_cli.py  test_stockfish_install_cli.py  test_yahtzee_cli.py
tests/test_core/: support.py  test_action_context.py  test_async_env.py  test_env.py  test_env_invalid_action_policy.py  test_invalid_action_policy.py  test_messages.py  test_rollout.py  test_rollout_runner.py  test_task_spec.py  test_turn_based_env.py  test_turn_based_env_invalid_actions.py  test_workflow.py
tests/test_games/: __init__.py  test_chess_env.py  test_game2048_env.py
(+92 files in other folders)
