[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlvr-games"
version = "0.1.0"
description = "Teach LLMs to reason by playing games"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "pillow>=11.0.0",
]

[project.scripts]
rlvr-games = "rlvr_games.cli.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
