[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlvr-games"
version = "0.1.0"
description = "Teach LLMs to reason by playing games"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dependencies = [
    "chess>=1.11.2",
    "pillow>=11.0.0",
    "pyarrow>=18.0.0",
    "zstandard>=0.23.0",
]

[project.scripts]
rlvr-games = "rlvr_games.cli.main:main"
rlvr-games-chess-datasets = "rlvr_games.games.chess.datasets_cli:main"
rlvr-games-install-stockfish = "rlvr_games.games.chess.stockfish_install:main"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
